--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,5 +1,5 @@
 .newsCard:hover {
-  background: #161b20 !important;
+  background: #212529 !important;
   color: white !important;
   transition: all 300ms ease-in-out;
 }/*# sourceMappingURL=index.css.map */
