--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,8 +1,7 @@
 .newsCard{
     &:hover {
-        background: #161b20 !important;
+        background: #212529 !important;
         color: white !important;
         transition: all 300ms ease-in-out;
     }
-
 }
