Fixed navigatuion bug and added readNews component

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -2,4 +2,10 @@
   background: #212529 !important;
   color: white !important;
   transition: all 300ms ease-in-out;
+  cursor: pointer;
+}
+
+.sourceBTN:hover {
+  color: white;
+  background: blue !important;
 }/*# sourceMappingURL=index.css.map */
