--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -3,5 +3,12 @@
         background: #212529 !important;
         color: white !important;
         transition: all 300ms ease-in-out;
+        cursor: pointer;
+    }
+}
+.sourceBTN{
+    &:hover{
+        color: white;
+        background: blue !important;
     }
 }
